# mapgen

./: Cargo.toml  README.md  generate_example.sh
examples/: archipelago.toml  debug.toml  earth_ice_age.toml  earth_like.toml  ice_age_earth.toml  mediterranean.toml  supercontinent.toml
src/: biome.rs  climate.rs  config.rs  heightmap.rs  lib.rs  rivers.rs  strategic.rs
src/province/: generator.rs  graph.rs  land.rs  merge.rs  mod.rs  png.rs  sea.rs  water.rs
src/region/: mod.rs  png.rs
