[package]
name = "mapgen"
version = "0.1.0"
edition = "2024"
description = "Procedural world generator for Chronicles of Realms"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]  # для GDExtension + обычной библиотеки

[[bin]]
name = "mapgen-cli"
path = "src/bin/cli.rs"

[dependencies]
# Сериализация
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

# CLI
clap = { version = "4.5", features = ["derive"] }

image = "0.24"
rayon = "1.10"
petgraph = "0.6"