[package]
name = "mapgen"
version = "0.1.0"
edition = "2024"
description = "Procedural world generator for Chronicles of Realms"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]  # для GDExtension + обычной библиотеки

[[bin]]
name = "mapgen-cli"
path = "src/bin/cli.rs"

[lints.clippy]
all = "warn"
pedantic = "warn"

[dependencies]
# Сериализация
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# CLI
clap = { version = "4.5", features = ["derive"] }

image = "0.24"
rayon = "1.10"
petgraph = "0.6"
fastnoise-lite = "1.1"
rand = "0.8"
rand_chacha = "0.3"
imageproc = "0.23"