[package]
name = "mapgen"
version = "0.1.0"
edition = "2024"
description = "Procedural world generator for Chronicles of Realms"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["rlib"]

[[bin]]
name = "mapgen-cli"
path = "src/bin/cli.rs"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -2 }
cast_precision_loss = { level = "allow", priority = 0 }
cast_possible_truncation = { level = "allow", priority = 0 }
cast_sign_loss = { level = "allow", priority = 0 }
missing_errors_doc = { level = "allow", priority = 0 }
cast_possible_wrap = { level = "allow", priority = 0 }
similar_names = { level = "allow", priority = 0 }

[dependencies]
# Сериализация
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Изображения (совместимы с WASM для рендеринга)
image = "0.24"
imageproc = "0.23"

# Алгоритмы
petgraph = "0.6"
fastnoise-lite = "1.1"
rand = "0.8"
rand_chacha = "0.3"

# Опциональные зависимости
rayon = { version = "1.10", optional = true }

[features]
default = ["parallel"]
parallel = ["dep:rayon"]  # rayon только для нативных сборок
wasm = []  # флаг для WASM-сборок (без rayon)